{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 160,
  "lineage": "b9f97580-7a9d-bdd2-f25a-fa496171d5d6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "public_subnet_1_1a_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00afe5bd3b91eb7ec",
            "public_dns": "ec2-52-200-48-134.compute-1.amazonaws.com",
            "public_ip": "52.200.48.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public_subnet_1_eip"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "public_subnet_1_1b_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04c9989411c463d3c",
            "public_dns": "ec2-23-21-124-223.compute-1.amazonaws.com",
            "public_ip": "23.21.124.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public_subnet_2_eip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_subnet_1_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00afe5bd3b91eb7ec",
            "domain": "vpc",
            "id": "eipalloc-00afe5bd3b91eb7ec",
            "network_border_group": "us-east-1",
            "private_dns": "ip-10-124-1-30.ec2.internal",
            "public_dns": "ec2-52-200-48-134.compute-1.amazonaws.com",
            "public_ip": "52.200.48.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public_subnet_1_eip"
            },
            "tags_all": {
              "Name": "public_subnet_1_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_subnet_2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c9989411c463d3c",
            "domain": "vpc",
            "id": "eipalloc-04c9989411c463d3c",
            "network_border_group": "us-east-1",
            "private_dns": "ip-10-124-3-38.ec2.internal",
            "public_dns": "ec2-23-21-124-223.compute-1.amazonaws.com",
            "public_ip": "23.21.124.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public_subnet_2_eip"
            },
            "tags_all": {
              "Name": "public_subnet_2_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "akl_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225554443307:internet-gateway/igw-063d1a64811478894",
            "id": "igw-063d1a64811478894",
            "owner_id": "225554443307",
            "tags": {
              "Name": "3_tier_igw"
            },
            "tags_all": {
              "Name": "3_tier_igw"
            },
            "vpc_id": "vpc-0c46a3c549125024d"
          },
          "dependencies": [
            "aws_vpc.akl_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "akl_NAT_gateway_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00afe5bd3b91eb7ec",
            "association_id": "eipassoc-06bab81b9c5380e49",
            "connectivity_type": "public",
            "id": "nat-09f308187d33dffda",
            "network_interface_id": "eni-0de104860b32bc576",
            "private_ip": "10.124.1.99",
            "public_ip": "52.200.48.134",
            "subnet_id": "subnet-02aab028f612482b8",
            "tags": {
              "Name": "gw_NAT_1a"
            },
            "tags_all": {
              "Name": "gw_NAT_1a"
            }
          },
          "dependencies": [
            "aws_internet_gateway.akl_internet_gateway",
            "aws_subnet.akl_private_subnets",
            "aws_vpc.akl_vpc",
            "data.aws_eip.public_subnet_1_1a_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "akl_NAT_gateway_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c9989411c463d3c",
            "association_id": "eipassoc-0aca47991fb6c4642",
            "connectivity_type": "public",
            "id": "nat-0653d98935600048c",
            "network_interface_id": "eni-0ba1718515a6ad360",
            "private_ip": "10.124.3.199",
            "public_ip": "23.21.124.223",
            "subnet_id": "subnet-0bfa7d47554f5ec13",
            "tags": {
              "Name": "gw_NAT_1b"
            },
            "tags_all": {
              "Name": "gw_NAT_1b"
            }
          },
          "dependencies": [
            "aws_internet_gateway.akl_internet_gateway",
            "aws_subnet.akl_private_subnets",
            "aws_vpc.akl_vpc",
            "data.aws_eip.public_subnet_1_1b_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "akl_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-063d1a64811478894",
            "id": "r-rtb-08122ace87b5695ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08122ace87b5695ba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.akl_internet_gateway",
            "aws_route_table.akl_public_rt",
            "aws_vpc.akl_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "akl_private_route_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-046f0fc9d1bf3fb421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09f308187d33dffda",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-046f0fc9d1bf3fb42",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.akl_internet_gateway",
            "aws_nat_gateway.akl_NAT_gateway_1a",
            "aws_route_table.akl_private_rt_1a",
            "aws_subnet.akl_private_subnets",
            "aws_vpc.akl_vpc",
            "data.aws_eip.public_subnet_1_1a_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "akl_private_route_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3e6632ce4b16b781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0653d98935600048c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3e6632ce4b16b78",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.akl_internet_gateway",
            "aws_nat_gateway.akl_NAT_gateway_1b",
            "aws_route_table.akl_private_rt_1b",
            "aws_subnet.akl_private_subnets",
            "aws_vpc.akl_vpc",
            "data.aws_eip.public_subnet_1_1b_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "akl_private_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225554443307:route-table/rtb-046f0fc9d1bf3fb42",
            "id": "rtb-046f0fc9d1bf3fb42",
            "owner_id": "225554443307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "3_tier_route_table_1a"
            },
            "tags_all": {
              "Name": "3_tier_route_table_1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c46a3c549125024d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.akl_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "akl_private_rt_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225554443307:route-table/rtb-0f3e6632ce4b16b78",
            "id": "rtb-0f3e6632ce4b16b78",
            "owner_id": "225554443307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "3_tier_route_table_1b"
            },
            "tags_all": {
              "Name": "3_tier_route_table_1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c46a3c549125024d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.akl_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "akl_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225554443307:route-table/rtb-08122ace87b5695ba",
            "id": "rtb-08122ace87b5695ba",
            "owner_id": "225554443307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "3_tier_public_route_table"
            },
            "tags_all": {
              "Name": "3_tier_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c46a3c549125024d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.akl_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_subnet_1_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a107f0499874170a",
            "route_table_id": "rtb-046f0fc9d1bf3fb42",
            "subnet_id": "subnet-02aab028f612482b8"
          },
          "dependencies": [
            "aws_route_table.akl_private_rt_1a",
            "aws_subnet.akl_private_subnets",
            "aws_vpc.akl_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_subnet_1_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c27cbcbd103b2c52",
            "route_table_id": "rtb-0f3e6632ce4b16b78",
            "subnet_id": "subnet-0bfa7d47554f5ec13"
          },
          "dependencies": [
            "aws_route_table.akl_private_rt_1b",
            "aws_subnet.akl_private_subnets",
            "aws_vpc.akl_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_subnet_1_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c01ff6f5a4692326",
            "route_table_id": "rtb-08122ace87b5695ba",
            "subnet_id": "subnet-0a20429f84c472f5b"
          },
          "dependencies": [
            "aws_route_table.akl_public_rt",
            "aws_subnet.akl_public_subnets",
            "aws_vpc.akl_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_subnet_2_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002215ccfd739468e",
            "route_table_id": "rtb-08122ace87b5695ba",
            "subnet_id": "subnet-0dfb31b949ebf73f1"
          },
          "dependencies": [
            "aws_route_table.akl_public_rt",
            "aws_subnet.akl_public_subnets",
            "aws_vpc.akl_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "akl_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225554443307:subnet/subnet-02aab028f612482b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.124.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02aab028f612482b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225554443307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1_1a"
            },
            "tags_all": {
              "Name": "private_subnet_1_1a"
            },
            "vpc_id": "vpc-0c46a3c549125024d"
          },
          "dependencies": [
            "aws_vpc.akl_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225554443307:subnet/subnet-02b126efe8cddf65d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.124.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b126efe8cddf65d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225554443307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2_1a"
            },
            "tags_all": {
              "Name": "private_subnet_2_1a"
            },
            "vpc_id": "vpc-0c46a3c549125024d"
          },
          "dependencies": [
            "aws_vpc.akl_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225554443307:subnet/subnet-0bfa7d47554f5ec13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.124.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfa7d47554f5ec13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225554443307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1_1b"
            },
            "tags_all": {
              "Name": "private_subnet_1_1b"
            },
            "vpc_id": "vpc-0c46a3c549125024d"
          },
          "dependencies": [
            "aws_vpc.akl_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225554443307:subnet/subnet-07a4ac233baad38ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.124.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a4ac233baad38ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225554443307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2_1b"
            },
            "tags_all": {
              "Name": "private_subnet_2_1b"
            },
            "vpc_id": "vpc-0c46a3c549125024d"
          },
          "dependencies": [
            "aws_vpc.akl_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "akl_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225554443307:subnet/subnet-0a20429f84c472f5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.124.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a20429f84c472f5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225554443307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet_1_1a"
            },
            "tags_all": {
              "Name": "Public_subnet_1_1a"
            },
            "vpc_id": "vpc-0c46a3c549125024d"
          },
          "dependencies": [
            "aws_vpc.akl_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225554443307:subnet/subnet-0dfb31b949ebf73f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.124.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfb31b949ebf73f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225554443307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet_2_1b"
            },
            "tags_all": {
              "Name": "Public_subnet_2_1b"
            },
            "vpc_id": "vpc-0c46a3c549125024d"
          },
          "dependencies": [
            "aws_vpc.akl_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "akl_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225554443307:vpc/vpc-0c46a3c549125024d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.124.0.0/16",
            "default_network_acl_id": "acl-0543394afd66c10a4",
            "default_route_table_id": "rtb-06427ad86c8e4dbf2",
            "default_security_group_id": "sg-0ce00012c762b97de",
            "dhcp_options_id": "dopt-0a18b20f83bc401e5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c46a3c549125024d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06427ad86c8e4dbf2",
            "owner_id": "225554443307",
            "tags": {
              "Name": "3_tier_vpc"
            },
            "tags_all": {
              "Name": "3_tier_vpc"
            }
          }
        }
      ]
    }
  ]
}